--- a/package.json
+++ b/package.json
@@ -2,29 +2,21 @@
   "name": "movie_api1",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/elalgrere/movie_api.git"
+    "url": "git+https://github.com/elalgrere/movie_api1.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/elalgrere/movie_api/issues"
+    "url": "https://github.com/elalgrere/movie_api1/issues"
   },
-  "homepage": "https://github.com/elalgrere/movie_api#readme",
-  "dependencies": {
-    "body-parser": "^1.20.0",
-    "express": "^4.18.1",
-    "lodash": "^4.17.21",
-    "morgan": "^1.10.0"
-  },
-  "devDependencies": {
-    "eslint": "^8.22.0"
-  }
+  "homepage": "https://github.com/elalgrere/movie_api1#readme"
 }
