--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "movie_api1",
+  "name": "movie_api",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -8,15 +8,14 @@
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/elalgrere/movie_api1.git"
-  },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/elalgrere/movie_api1/issues"
+  "dependencies": {
+    "express": "^4.18.1",
+    "uuid": "^9.0.0"
   },
-  "homepage": "https://github.com/elalgrere/movie_api1#readme"
+  "devDependencies": {
+    "nodemon": "^2.0.19"
+  }
 }
